--- a/index.html
+++ b/index.html
@@ -24,10 +24,107 @@
                 <input type="search" name="Procurar" id="search" placeholder="Digite o nome do Pokemon">
                 <button type="submit">Procurar</button>
                 </div>
-                <div class="pokedex">
-                    
+                <h3 class="iniciais">Pokemons Iniciais</h3>
+                <div class="pokedex">                    
+                   <ol class="pokemons">
+                    <li class="pokemon">
+                        <span class="pokeid">#001</span>
+                        <span class="nomes">Bulbasaur</span>
+                        <div class="info">
+                            <ol class="info-dos-pokemons">
+                                <li>grass</li>
+                                <li>poison</li>
+                            </ol>
+                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" alt="">     
+                        </div>
+                        
+                    </li>
+                    <li class="pokemon">
+                        <span class="pokeid">#002</span>
+                        <span class="nomes">Ivysaur</span>
+                        <div class="info">
+                            <ol class="info-dos-pokemons">
+                                <li>grass</li>
+                                <li>poison</li>
+                            </ol>
+                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/2.png" alt="">     
+                        </div>
+                    </li>
+                    <li class="pokemon">
+                        <span class="pokeid">#003</span>
+                        <span class="nomes">Venusaur</span>
+                        <div class="info">
+                            <ol class="info-dos-pokemons">
+                                <li>grass</li>
+                                <li>poison</li>
+                            </ol>
+                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/3.png" alt="">     
+                        </div>
+                    </li>  
+                    <li class="pokemon fire">
+                        <span class="pokeid">#004</span>
+                        <span class="nomes">Charmander</span>
+                        <div class="info">
+                            <ol class="info-dos-pokemons">
+                                <li>fire</li>
+                            </ol>
+                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/4.png" alt="">     
+                        </div>                     
+                    </li>
+                    <li class="pokemon fire">
+                        <span class="pokeid">#005</span>
+                        <span class="nomes">Charmeleon</span>
+                        <div class="info">
+                            <ol class="info-dos-pokemons">
+                                <li>fire</li>
+                            </ol>
+                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/5.png" alt="">     
+                        </div>                     
+                    </li>   
+                    <li class="pokemon fire">
+                        <span class="pokeid">#006</span>
+                        <span class="nomes">Charizard</span>
+                        <div class="info">
+                            <ol class="info-dos-pokemons">
+                                <li>fire</li>
+                                <li>flying</li>
+                            </ol>
+                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/6.png" alt="">     
+                        </div>                     
+                    </li>
+                    <li class="pokemon water">
+                        <span class="pokeid">#007</span>
+                        <span class="nomes">Squirtle</span>
+                        <div class="info">
+                            <ol class="info-dos-pokemons">
+                                <li class="li-water">water</li>
+                            </ol>
+                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/7.png" alt="">     
+                        </div>                     
+                    </li>    
+                    <li class="pokemon water">
+                        <span class="pokeid">#008</span>
+                        <span class="nomes">Wartortle</span>
+                        <div class="info">
+                            <ol class="info-dos-pokemons">
+                                <li class="li-water">water</li>
+                            </ol>
+                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/8.png" alt="">     
+                        </div>                     
+                    </li>   
+                    <li class="pokemon water">
+                        <span class="pokeid">#009</span>
+                        <span class="nomes">Blastoise</span>
+                        <div class="info">
+                            <ol class="info-dos-pokemons">
+                                <li class="li-water">water</li>
+                            </ol>
+                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/9.png" alt="">     
+                        </div>                     
+                    </li>           
+                   </ol>
                 </div>
-            </main>
+              </main>
         </div>
         <script src="assets/js/main.js"></script>
 </body>
