--- a/index.html
+++ b/index.html
@@ -23,6 +23,21 @@
                 <div class="procurar">
                 <input type="search" name="Procurar" id="search" placeholder="Digite o nome do Pokemon">
                 <button type="submit">Procurar</button>
+                    <div class="pokemon-buscado">
+                        <ol class="pokemons">
+                            <li class="pokemon">
+                                <span class="pokeid">#001</span>
+                                <span class="nomes">Teste</span>
+                                <div class="info">
+                                    <ol class="info-dos-pokemons">
+                                        <li>Teste</li>
+                                        <li>Teste</li>
+                                    </ol>
+                                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/1.png" alt=""> 
+                                </div>
+                            </li>
+                        </ol>
+                    </div>
                 </div>
                 <h3 class="iniciais">Pokemons Iniciais</h3>
                 <div class="pokedex">                    
