--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                                 <span class="nome_escolhido"></span>
                                 <div class="info">
                                     <ol class="info-dos-pokemons escolhido">
-                                        <li></li>
+                                        <li class="lista"></li>
+                                        <li class="lista"></li>
                                     </ol>
                                     <img class="image_pokemon" src=""> 
                                 </div>
