main-alternativo para main

--- a/index.html
+++ b/index.html
@@ -143,6 +143,6 @@
                 </div>
               </main>
         </div>
-        <script src="assets/js/main_alternativo.js"></script>
+        <script src="assets/js/main.js"></script>
 </body>
 </html>
